Switch fully to module names and deferred Module init